# Document_AI_Processing_GCP

./: .dockerignore  Dockerfile  Dockerfile.api  SCHEMA_UPDATE_SUMMARY.md  api.py  delete.txt  deploy_cloud_run_job.sh  enable_apis.sh  main.py  pre_deployment_checklist.sh  pyproject.toml  run.sh  setup_database.py  store_gcs.py  test_schema_verification.py  test_system.py
config/: config.py
frontend/: .env  Dockerfile  cloudbuild.yaml  deploy_frontend.sh  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Dashboard.jsx  DocumentDetailModal.jsx  DocumentTable.jsx  FilterBar.jsx  Header.jsx  Header.old.jsx  UI.jsx  UploadModal.jsx
frontend/src/styles/: components.css  globals.css  layout.css  utilities.css
frontend/src/utils/: api.js
src/: database_service.py  document_ai_processor.py  gcs_file_manager.py  invoice_processor.py
tests/: test_multiple_values.py
